force-app/main/default/objects/Opportunity_Product_Component__c/Opportunity_Product_Component__c.object-meta.xml
<CustomObject>
    <label>Opportunity Product Component</label>
    <nameField>
        <displayFormat>OPC-{0000000}</displayFormat>
        <label>Opportunity Product Component Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Product Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>