force-app/main/default/objects/Opportunity_Product_Component__c/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <description>Deployment from Item master product, request from Jason</description>
    <label>Deployment</label>
    <type>TextArea</type>
</CustomField>