force-app/main/default/objects/Opportunity_Product_Component__c/fields/List_Price_Recurring__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Recurring__c</fullName>
    <label>List Price Recurring</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>