force-app/main/default/objects/Opportunity_Product_Component__c/fields/Opportunity_Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_Line__c</fullName>
    <formula>TEXT(Opportunity__r.Product_Line__c)</formula>
    <label>Opportunity Product Line</label>
    <type>Text</type>
</CustomField>