force-app/main/default/objects/Opportunity_Product_Component__c/fields/Opportunity_Recurring__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Recurring__c</fullName>
    <formula>Opportunity__r.Maintenance_Amount__c</formula>
    <label>Opportunity Recurring</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>