force-app/main/default/objects/Opportunity_Product_Component__c/fields/Practice_Group__c.field-meta.xml
<CustomField>
    <fullName>Practice_Group__c</fullName>
    <formula>CASE(TEXT(Product_LineNew__r.Practice__c),
&quot;Knowledge &amp; Content&quot;,&quot;Knowledge &amp; Content&quot;,
&quot;Flow &amp; Intake Bundle&quot;, &quot;Flow &amp; Intake Bundle&quot;,
&quot;IT&quot;, &quot;IT&quot;,
&quot;Leaders &amp; Professionals&quot;, &quot;Leaders &amp; Professionals&quot;,
&quot;Marketing &amp; BD&quot;,&quot;Marketing &amp; BD&quot;,
&quot;Multiple Products&quot;,&quot;Multiple Products&quot;,
&quot;Operations &amp; Finance&quot;,&quot;Operations &amp; Finance&quot;,
&quot;Risk and Compliance&quot;,&quot;Risk &amp; Compliance&quot;,
&quot;Risk &amp; Compliance&quot;,&quot;Risk &amp; Compliance&quot;,
&quot;DealCloud&quot;,&quot;DealCloud&quot;,
&quot;Other&quot;
)</formula>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>