force-app/main/default/objects/Opportunity_Product_Component__c/fields/Recurring_Amount_Change_EUR__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Amount_Change_EUR__c</fullName>
    <formula>CASE(TEXT(CurrencyIsoCode),
  &quot;AUD&quot;,(Recurring_Amount_Change__c * 0.666642),
  &quot;CAD&quot;,(Recurring_Amount_Change__c * 0.872396),
  &quot;EUR&quot;,(Recurring_Amount_Change__c),
  &quot;GBP&quot;,(Recurring_Amount_Change__c * 1.189150),
  &quot;NZD&quot;,(Recurring_Amount_Change__c * 0.721531),
  &quot;USD&quot;,(Recurring_Amount_Change__c * 0.900900),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring Amount Change EUR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>