force-app/main/default/objects/Opportunity_Product_Component__c/fields/Recurring_Amount_Change_GBP__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Amount_Change_GBP__c</fullName>
    <formula>CASE(TEXT(CurrencyIsoCode),
  &quot;AUD&quot;,(Recurring_Amount_Change__c * 0.560604),
  &quot;CAD&quot;,(Recurring_Amount_Change__c * 0.733554),
  &quot;EUR&quot;,(Recurring_Amount_Change__c * 0.840937),
  &quot;GBP&quot;,(Recurring_Amount_Change__c),
  &quot;NZD&quot;,(Recurring_Amount_Change__c * 0.606762),
  &quot;USD&quot;,(Recurring_Amount_Change__c * 0.757600),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recurring Amount Change GBP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>