force-app/main/default/objects/Opportunity_Product_Component__c/fields/Recurring_Amount_Change_Update__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Amount_Change_Update__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Recurring Amount Change Update</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>