force-app/main/default/objects/Opportunity_Product_Component__c/fields/Sales_Category_OPC__c.field-meta.xml
<CustomField>
    <fullName>Sales_Category_OPC__c</fullName>
    <description>This field categorizes OPCs into categories that match the quota system.</description>
    <formula>CASE(Type__c,
  &quot;Legal - New Customer&quot;,&quot;New Product Customer&quot;,
  &quot;Legal - New Product&quot;,&quot;New Product Customer&quot;,
  &quot;Legal - Thomson Elite&quot;,&quot;New Product Customer&quot;,
  &quot;Legal - Recovered Customer&quot;,&quot;New Product Customer&quot;,
  &quot;Legal - Recovered Product&quot;,&quot;New Product Customer&quot;,
  &quot;Legal - New Converted Product&quot;,&quot;New Product Customer&quot;,
  &quot;Legal - New Converted Customer&quot;,&quot;New Product Customer&quot;,
  &quot;MDY&quot;,&quot;New Product Customer&quot;,
  &quot;Legal - Add-on module&quot;,&quot;Module&quot;,
  &quot;Legal - Version License&quot;,&quot;Module&quot;,
  &quot;Legal - Recurring Adjustment&quot;,&quot;Recurring Adjustment&quot;,
  &quot;License Conversion - Recurring Decrease&quot;,&quot;Churn&quot;,
  &quot;License Conversion - Recurring Increase&quot;,&quot;License Uplift&quot;,
  &quot;Legal - Assessment/POC&quot;,&quot;Other&quot;,
  &quot;Legal - License Band Uplift&quot;,&quot;License Uplift&quot;,
  &quot;Legal - User Count Uplift&quot;,&quot;License Uplift&quot;,
  &quot;Legal - Additional Services&quot;,&quot;Additional Services&quot;,
  &quot;Intapp Prime&quot;,&quot;Additional Services&quot;,
  &quot;Legal - Services Change Request&quot;,&quot;Additional Services&quot;,
  &quot;Legal - Services Change Request Internal&quot;,&quot;Additional Services&quot;,
  &quot;Training&quot;, &quot;Additional Services&quot;,
  &quot;Services - Partner&quot;, &quot;Additional Services&quot;,
  &quot;Legal - CPI / Recurring Increase&quot;,&quot;SFA&quot;,
  &quot;Cancellation - Customer&quot;,&quot;Churn&quot;,
  &quot;Cancellation - Module&quot;,&quot;Churn&quot;,
  &quot;Cancellation - Product&quot;,&quot;Churn&quot;,
  &quot;Downgrade - Product&quot;,&quot;Churn&quot;,
  &quot;Legal - User Count Decrease&quot;,&quot;Churn&quot;,
  &quot;Downgrade - License Conversion&quot;,&quot;Churn&quot;,
  &quot;Cancellation - CPI&quot;,&quot;Churn&quot;,
  &quot;Cancellation - Recurring Adjustment&quot;,&quot;Churn&quot;,
  &quot;Legal - Acquired New Customer&quot;,&quot;Acquired Contract&quot;,
  &quot;Legal - Acquired New Product&quot;,&quot;Acquired Contract&quot;,
  &quot;Legal - Acquired Add-on Module&quot;,&quot;Acquired Contract&quot;,
  &quot;Legal - Consulting Services&quot;,&quot;Additional Services&quot;,
  &quot;Upgrade&quot;, &quot;Additional Services&quot;,
  &quot;Intapp Prime&quot;, &quot;Additional Services&quot;, 
  &quot;ACV Downgrade/Partial ACV Cancellation&quot;, &quot;Churn&quot;,
  &quot;New Implementation&quot;, &quot;Additional Services&quot;,
  &quot;ACV Recovery/Partial ACV Reinstatement&quot;, &quot;Churn&quot;,
  &quot;Platform Conversion - Increase&quot;, &quot;Module&quot;,
  &quot;Platform Conversion - Internal Increase&quot;, &quot;Other&quot;,
  &quot;Platform Conversion - Decrease&quot;, &quot;Module&quot;,
  &quot;Platform Conversion - Internal Decrease&quot;, &quot;Other&quot;,
  &quot;Other&quot;
)</formula>
    <label>Sale Category (OPC)</label>
    <type>Text</type>
</CustomField>