force-app/main/default/objects/Opportunity_Product_Component__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Legal - New Customer</fullName>
                <label>New Customer</label>
            </value>
            <value>
                <fullName>Legal - New Product</fullName>
                <label>New Product</label>
            </value>
            <value>
                <fullName>Legal - Add-on module</fullName>
                <label>Add-on module</label>
            </value>
            <value>
                <fullName>Legal - Assessment/POC</fullName>
                <label>Assessment/POC</label>
            </value>
            <value>
                <fullName>Legal - Recurring Adjustment</fullName>
                <label>Recurring Adjustment</label>
            </value>
            <value>
                <fullName>License Conversion - Recurring Increase</fullName>
                <label>Entitlement Conversion - Recurring Increase</label>
            </value>
            <value>
                <fullName>Legal - License Band Uplift</fullName>
                <label>License Band Uplift</label>
            </value>
            <value>
                <fullName>Legal - User Count Uplift</fullName>
                <label>User Count Uplift</label>
            </value>
            <value>
                <fullName>Legal - Acquired New Customer</fullName>
                <label>Acquired New Customer</label>
            </value>
            <value>
                <fullName>Legal - Acquired New Product</fullName>
                <label>Acquired New Product</label>
            </value>
            <value>
                <fullName>Legal - Acquired Add-on Module</fullName>
                <label>Acquired Add-on Module</label>
            </value>
            <value>
                <fullName>Legal - Additional Services</fullName>
                <label>Additional Services</label>
            </value>
            <value>
                <fullName>License Conversion - Recurring Decrease</fullName>
                <label>Entitlement Conversion - Recurring Decrease</label>
            </value>
            <value>
                <fullName>Cancellation - Customer</fullName>
            </value>
            <value>
                <fullName>Cancellation - Product</fullName>
            </value>
            <value>
                <fullName>Cancellation - Module</fullName>
            </value>
            <value>
                <fullName>Cancellation - Recurring Adjustment</fullName>
            </value>
            <value>
                <fullName>Downgrade - Product</fullName>
                <label>Entitlement Downgrade - Product</label>
            </value>
            <value>
                <fullName>Legal - User Count Decrease</fullName>
                <label>User Count Decrease</label>
            </value>
            <value>
                <fullName>Legal - CPI / Recurring Increase</fullName>
                <label>SFA / Recurring Increase</label>
            </value>
            <value>
                <fullName>Legal - Billing Restarted - Customer</fullName>
                <label>Billing Restarted - Customer</label>
            </value>
            <value>
                <fullName>Legal - Consulting Services</fullName>
                <label>Consulting Services</label>
            </value>
            <value>
                <fullName>Legal - Services Change Request</fullName>
                <label>Services Change Request</label>
            </value>
            <value>
                <fullName>Legal - Billing Paused/Restarted</fullName>
                <label>Subscription Concecession</label>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>ACV Downgrade/Partial ACV Cancellation</fullName>
                <label>Internal ACV Cancellation</label>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>ACV Recovery/Partial ACV Reinstatement</fullName>
                <label>Internal ACV Recovery</label>
            </value>
            <value>
                <fullName>New Implementation</fullName>
            </value>
            <value>
                <fullName>Platform Conversion - Increase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>