force-app/main/default/objects/Opportunity_Product_Component__c/validationRules/OPC_Currency_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>OPC_Currency_validation</fullName>
    <active>true</active>
    <description>OPC Currency should always be same as Opportunity&apos;s currency</description>
    <errorConditionFormula>TEXT(CurrencyIsoCode) &lt;&gt; TEXT(Opportunity__r.CurrencyIsoCode)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>OPC Currency should not be different from Opportunity&apos;s currency</errorMessage>
</ValidationRule>